force-app/main/default/objects/Opportunity/fields/Waiting_Flag__c.field-meta.xml
<CustomField>
    <fullName>Waiting_Flag__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Sensitive Personal Information;Source - Salesforce</complianceGroup>
    <description>Indicator field to show red and green flag</description>
    <formula>If(Waiting_Indicator__c = true,IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Waiting Indicator&quot;),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Waiting Flag</label>
    <type>Text</type>
</CustomField>