force-app/main/default/objects/Opportunity/fields/Waiting_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Waiting_Indicator__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Sensitive_Personal_Information;Source - Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Indicates waiting for some info/ document from customer in any opportunity stage</description>
    <label>Waiting Indicator</label>
    <type>Checkbox</type>
</CustomField>