force-app/main/default/objects/Opportunity/fields/Won_from_Lost_to__c.field-meta.xml
<CustomField>
    <fullName>Won_from_Lost_to__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Captured as part of Opp Won \ Lost stage. Lists the competitors in a drop down.</description>
    <label>Won from/Lost to?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AAMI</fullName>
            </value>
            <value>
                <fullName>ACCU - Australian Credit CU</fullName>
            </value>
            <value>
                <fullName>AIG Australia</fullName>
            </value>
            <value>
                <fullName>AMP Banking</fullName>
            </value>
            <value>
                <fullName>Adelaide Bank</fullName>
            </value>
            <value>
                <fullName>Allianz Australia</fullName>
            </value>
            <value>
                <fullName>American Express International</fullName>
            </value>
            <value>
                <fullName>Aussie Group</fullName>
            </value>
            <value>
                <fullName>Australian Unity</fullName>
            </value>
            <value>
                <fullName>BUPA</fullName>
            </value>
            <value>
                <fullName>Bank SA</fullName>
            </value>
            <value>
                <fullName>Bank of China (Australia) Ltd</fullName>
            </value>
            <value>
                <fullName>Bank of Melbourne</fullName>
            </value>
            <value>
                <fullName>Bank of Queensland</fullName>
            </value>
            <value>
                <fullName>Bank of Sydney Limited</fullName>
            </value>
            <value>
                <fullName>Bank of Tokyo-Mitsubishi UFJ</fullName>
            </value>
            <value>
                <fullName>Bankwest</fullName>
            </value>
            <value>
                <fullName>Bendigo Bank</fullName>
            </value>
            <value>
                <fullName>Bluestone Finance</fullName>
            </value>
            <value>
                <fullName>Citibank</fullName>
            </value>
            <value>
                <fullName>Comminsure</fullName>
            </value>
            <value>
                <fullName>Commonwealth Bank of Australia</fullName>
            </value>
            <value>
                <fullName>Credit Union Australia Ltd</fullName>
            </value>
            <value>
                <fullName>Credit Union SA Ltd</fullName>
            </value>
            <value>
                <fullName>Defence Bank Limited</fullName>
            </value>
            <value>
                <fullName>Diners Club</fullName>
            </value>
            <value>
                <fullName>Elders</fullName>
            </value>
            <value>
                <fullName>Esanda</fullName>
            </value>
            <value>
                <fullName>GE</fullName>
            </value>
            <value>
                <fullName>GIO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>