force-app/main/default/objects/Opportunity/recordTypes/Commercial_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Opportunity</fullName>
    <active>true</active>
    <businessProcess>CCRM Opportunity Process</businessProcess>
    <label>Commercial Opportunity</label>
</RecordType>