force-app/main/default/objects/Opportunity/recordTypes/MLCRM_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>MLCRM_Opportunity</fullName>
    <active>true</active>
    <businessProcess>MLCRM Opportunity Process</businessProcess>
    <label>Mobile Lending Opportunity</label>
</RecordType>