force-app/main/default/objects/Opportunity/validationRules/CCRM_Customer_Check_For_CAP.validationRule-meta.xml
<ValidationRule>
    <fullName>CCRM_Customer_Check_For_CAP</fullName>
    <active>true</active>
    <description>When the user selects the Customer name field,then the list of customers should be restricted to only customers with the source system &apos;CAP&apos;.</description>
    <errorConditionFormula>
        AND(
            $Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
            $Profile.Name = &apos;ANZ CCRM Standard User&apos;,
            NOT(ISBLANK( AccountId )),
            Account.Source_System_Name__c &lt;&gt; &apos;CAP-CIS&apos;, 
            RecordType.DeveloperName = &apos;Commercial_Opportunity&apos;
        )
    </errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Unsupported customer profile selected. Please choose a valid CAP customer profile to proceed.</errorMessage>
</ValidationRule>