force-app/main/default/objects/Opportunity/validationRules/CCRM_OwnerRegionSegmentValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>CCRM_OwnerRegionSegmentValidation</fullName>
    <active>true</active>
    <description>Prevent users from editing leads which are not from their region</description>
    <errorConditionFormula>AND(
    $Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
    RecordType.DeveloperName = &apos;Commercial_Opportunity&apos;,
    $UserRole.DeveloperName &lt;&gt; &apos;Commercial_Admin&apos;,
    OR($UserRole.DeveloperName = &apos;Relationship_Manager&apos;,  
        $UserRole.DeveloperName = &apos;Regional_Executive&apos;,
        $UserRole.DeveloperName = &apos;Area_Manager&apos;),
    NOT(My_Region_Flag__c)
)</errorConditionFormula>
    <errorMessage>You can only update Opportunities within your region and segment.</errorMessage>
</ValidationRule>