force-app/main/default/objects/Opportunity/validationRules/CCRMCloseDateCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>CCRMCloseDateCheck</fullName>
    <active>false</active>
    <description>Checks if the Close date is a future date</description>
    <errorConditionFormula>AND(
        $Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
        RecordType.DeveloperName = &apos;Commercial_Opportunity&apos;,
        CloseDate &lt;  TODAY(),
        (ISCHANGED( CloseDate ) || ISNEW()),
        NOT($Profile.Name = &quot;System Administrator&quot;)
    )</errorConditionFormula>
    <errorDisplayField>CloseDate</errorDisplayField>
    <errorMessage>Close Date must be a future date</errorMessage>
</ValidationRule>