force-app/main/default/objects/Opportunity/validationRules/Commercial_CLGCustomerPrevent.validationRule-meta.xml
<ValidationRule>
    <fullName>Commercial_CLGCustomerPrevent</fullName>
    <active>true</active>
    <description>This is used to prevent user to populate CLG Customer on Customer field.</description>
    <errorConditionFormula>AND(
				$Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
				RecordType.DeveloperName = &apos;Commercial_Opportunity&apos;,
				$User.Profile_Name__c = &apos;ANZ CCRM Standard User&apos;,
				NOT(ISNULL(AccountId)), 
			 Account.RecordType.DeveloperName = &apos;CLG&apos;
)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Please select a valid Non-CLG customer.</errorMessage>
</ValidationRule>