force-app/main/default/objects/Opportunity/validationRules/CommercialCloseDateOnWeekends.validationRule-meta.xml
<ValidationRule>
    <fullName>CommercialCloseDateOnWeekends</fullName>
    <active>true</active>
    <description>Close date for Products added in Opportunity record should only allow for week days</description>
    <errorConditionFormula>AND(
$Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
RecordType.DeveloperName = &apos;Commercial_Opportunity&apos;,
$User.Profile_Name__c = &apos;ANZ CCRM Standard User&apos;,
CASE(MOD(  CloseDate - DATE(1900, 1, 7), 7),
0, 0,
6, 0,
1) = 0
)</errorConditionFormula>
    <errorMessage>Weekends cannot be selected as Close date.</errorMessage>
</ValidationRule>