force-app/main/default/objects/Opportunity/validationRules/DivCRM_Referrer_Email_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>DivCRM_Referrer_Email_Required</fullName>
    <active>true</active>
    <description>CC-1882/CC-3672/CC-5587: Referrer Name and Referrer Email is required for Lead Source = Internal Referral ( also if Internal Referrer is blank for Commercial Bank)</description>
    <errorConditionFormula>AND(
$Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
RecordType.DeveloperName = &apos;MLCRM_Opportunity&apos;,
OR(
    AND(
        OR(
        TEXT(Associated_Source_Detail__c) = &apos;Commercial Bank&apos;,
        TEXT(Associated_Source_Detail__c) = &apos;ANZ Plus Coach&apos;
        ),
        TEXT(LeadSource) = &apos;Internal Referral&apos;,
        ISBLANK(FinServ__ReferredByUser__c),
        ISBLANK(Referrer_Email__c)
    ),
    AND(
        TEXT(Associated_Source_Detail__c) != &apos;Commercial Bank&apos;,
        TEXT(Associated_Source_Detail__c) != &apos;ANZ Plus Coach&apos;,
        TEXT(LeadSource) = &apos;Internal Referral&apos;,
        ISBLANK(Referrer_Email__c)
    ),
    AND(
        TEXT(Associated_Source_Detail__c) = &apos;Client Referral&apos;,
        TEXT(LeadSource) = &apos;External Referral&apos;,
        ISBLANK(FinServ__ReferredByContact__c),
        ISBLANK(Referrer_Email__c)
    ),
    AND(
        TEXT(Associated_Source_Detail__c) != &apos;Client Referral&apos;,
        TEXT(LeadSource) = &apos;External Referral&apos;,
        ISBLANK(Referrer_Email__c)
    )
)
)</errorConditionFormula>
    <errorDisplayField>Referrer_Email__c</errorDisplayField>
    <errorMessage>&apos;Referrer Email&apos; is mandatory for Internal/External Referral Opportunity</errorMessage>
</ValidationRule>