force-app/main/default/objects/Opportunity/validationRules/MLCRM_No_Lower_Version.validationRule-meta.xml
<ValidationRule>
    <fullName>MLCRM_No_Lower_Version</fullName>
    <active>true</active>
    <description>Ensure incoming version of the loan is not lower than version currently in Salesforce</description>
    <errorConditionFormula>AND(
$Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
NOT(ISNEW()),
PRIORVALUE(Version__c) &gt; Version__c
)</errorConditionFormula>
    <errorMessage>The version cannot be older than the current value</errorMessage>
</ValidationRule>