force-app/main/default/objects/Opportunity/validationRules/MLCRM_ValidateExpectedSettlementDate.validationRule-meta.xml
<ValidationRule>
    <fullName>MLCRM_ValidateExpectedSettlementDate</fullName>
    <active>true</active>
    <description>Validate if expected settlement date falls on a weekday</description>
    <errorConditionFormula>AND(
    $Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
    RecordType.DeveloperName = &apos;MLCRM_Opportunity&apos;,
    NOT($Profile.Name = &quot;System Administrator&quot;),
    OR(ISNEW(), ISCHANGED(Expected_Settlement_Date__c)),
    NOT(ISBLANK(Expected_Settlement_Date__c)),
    OR(Expected_Settlement_Date__c &lt;= TODAY(), 
       CASE(MOD(Expected_Settlement_Date__c - DATE(1900, 1, 7), 7),
        0, 0,
        6, 0,
        1) = 0
    )
)</errorConditionFormula>
    <errorDisplayField>Expected_Settlement_Date__c</errorDisplayField>
    <errorMessage>Expected Settlement Date must be in future and must fall on a weekday</errorMessage>
</ValidationRule>