force-app/main/default/objects/Opportunity/validationRules/MLCRM_validateFieldOnCloseOrLostStage.validationRule-meta.xml
<ValidationRule>
    <fullName>MLCRM_validateFieldOnCloseOrLostStage</fullName>
    <active>true</active>
    <description>This validation rule is used to make opportunity field read only for terminal stage</description>
    <errorConditionFormula>AND(
  $Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
  RecordType.DeveloperName = &apos;MLCRM_Opportunity&apos;,
  NOT($Profile.Name = &quot;System Administrator&quot;),
  AND(
    OR(
      Text(StageName) = &apos;Lost&apos;,
      Text(StageName) = &apos;Closed&apos;  
    ),
    OR(
      IsChanged(Name),
      IsChanged(CloseDate)
    )
  )
)</errorConditionFormula>
    <errorMessage>Name, Stage, Close Date cannot be updated at this current stage.</errorMessage>
</ValidationRule>