force-app/main/default/objects/Opportunity/listViews/All_CEM_Team_Opportunities.listView-meta.xml
<ListView>
    <fullName>All_CEM_Team_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Won,Closed Lost</value>
    </filters>
    <filters>
        <field>Opportunity_Owner_Teamcode__c</field>
        <operation>equals</operation>
        <value>CEM Team</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Commercial_Opportunity</value>
    </filters>
    <label>All CEM Team Opportunities</label>
    <sharedTo>
        <role>Head_of_NBC</role>
        <role>Head_of_Remote_Teams_NBC</role>
        <role>Small_Business_Banking_NBC</role>
        <role>Team_Leader_NBC</role>
    </sharedTo>
</ListView>