force-app/main/default/objects/Opportunity/listViews/All_Closed_ML_Opportunities.listView-meta.xml
<ListView>
    <fullName>All_Closed_ML_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Customer_Needs__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Waiting_Flag__c</columns>
    <columns>Follow_Up_Date__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>Territory__c</columns>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.MLCRM_Opportunity</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Closed,Lost</value>
    </filters>
    <filterScope>Everything</filterScope>
    <label>All Closed Opportunities</label>
    <sharedTo>
        <roleAndSubordinates>ANZ_Mobile_Lending</roleAndSubordinates>
    </sharedTo>
</ListView>