force-app/main/default/objects/Opportunity/listViews/All_Opportunities_for_Cust_Engagement.listView-meta.xml
<ListView>
    <fullName>All_Opportunities_for_Cust_Engagement</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Customer_Needs__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Opportunity_Owner__c</columns>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Opportunity Won,Opportunity Lost</value>
    </filters>
    <filters>
        <field>My_Team__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Commercial_Opportunity</value>
    </filters>
    <filterScope>Everything</filterScope>
    <label>All Opportunities for Cust Engagement</label>
    <sharedTo>
        <group>Admin_and_Operations_Team</group>
        <role>Channel_Segment_Manager</role>
        <role>Commercial_Group_Executive</role>
        <role>Commercial_Operations_Team</role>
        <role>Credit_Overview_Team</role>
        <role>SME_General_Manager</role>
        <roleAndSubordinatesInternal>SME_Head_of_NBC</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>